--- a/src/main/java/interfaces/JanelaPesquisaApresentaçõesMusicais.form
+++ b/src/main/java/interfaces/JanelaPesquisaApresentaçõesMusicais.form
@@ -321,8 +321,8 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="16" max="32767" attributes="0"/>
-                  <Component id="apresentações_musicais_seleciondasScrollPane" min="-2" pref="603" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                  <Component id="apresentações_musicais_seleciondasScrollPane" min="-2" pref="741" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
